Bug 1067541.  Image preloads should not keep going once the actual image has started and gotten canceled.  r=peterv